--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
+    "@types/node": "24.10.1",
     "@types/react": "19.2.6",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.31",
